mirrorLogging/manifests/13-logger-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logger
  namespace: ${NAMESPACE}
  labels:
    app: logger
spec:
  selector:
    app: logger
  ports:
    - name: http
      port: 80
      targetPort: 8080
